# aeo-geo-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
apps/api/: alembic.ini  app.py  requirements.txt  vercel.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/core/: config.py  database.py  logging.py  secrets.py  security.py
apps/api/app/models/: __init__.py  opportunity.py  run_history.py  source_config.py  user.py
apps/api/app/schemas/: auth.py  metrics.py  opportunity.py  run.py  source.py
apps/api/app/services/: aeo_geo_agents.py  briefs.py  content_creator.py  detectors.py  ingestion.py  manual_opportunity.py  metrics.py  new_opportunity_discovery.py  scoring.py  strategist_engine.py
apps/web/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts
sample_data/: ahrefs.json  citations.json  conversions.csv  gsc.csv  semrush.json
sample_data/competitors/: competitor1.xml  competitor2.xml
scripts/: seed_data.py
src/content_demand_agent/: analytics.py  app.py  config.py  db.py  models.py  security.py
src/content_demand_agent/static/: app.js  dashboard.css  dashboard.js  styles.css
src/content_demand_agent/templates/: dashboard.html  index.html
src/content_demand_capture_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
worker/: celery_app.py  requirements.txt  tasks.py
(+24 files in other folders)
